--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "@react-native-picker/picker": "^2.1.0",
     "@react-navigation/native-stack": "^6.2.4",
     "expo": "~42.0.1",
+    "expo-file-system": "~11.1.3",
+    "expo-linear-gradient": "^9.2.0",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
-    "react-native-fs": "^2.0.1-rc.2",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
     "react-native-web": "~0.13.12",
